# TicTacToe

./: .gitignore  README.md
backend/: backend.cabal  stack.yaml
backend/app/: Main.hs
backend/src/: AI.hs  Backend.hs  Lib.hs
electron-app/: index.css  index.html  main.js  package.json
electron-app/UI/: renderer.js
electron-app/UI/backend/: interface.js
electron-app/resources/: .gitignore
haskell-app/: index.html  main.js  package.json  renderer.js
